fix: promo layout shift, footer link

--- a/src/widgets/promo/card/ui/promo-card.module.scss
+++ b/src/widgets/promo/card/ui/promo-card.module.scss
@@ -15,7 +15,8 @@
 
 .img_container {
   position: relative;
-  width: auto;
+  width: 1216px;
+  height: 524px;
 
   @media screen and (max-width: 1140px) {
     height: 100%;
